R-CODE
RESP-4: At the end of a turn, game determines if one or more players have 7 shields